--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
   "license": "",
   "files": [],
   "dependencies": {
-    "autoprefixer":               "*",
+    "autoprefixer": "*",
     "babel-preset-es2015-rollup": "*",
-    "browser-sync":               "*",
-    "cssnano":                    "*",
-    "del":                        "*",
-    "gulp":                       "*",
-    "gulp-changed":               "*",
-    "gulp-file-include":          "*",
-    "gulp-htmlmin":               "*",
-    "gulp-imagemin":              "*",
-    "gulp-plumber":               "*",
-    "gulp-postcss":               "*",
-    "gulp-sass":                  "*",
-    "gulp-sourcemaps":            "*",
-    "node-notifier":              "*",
-    "http-proxy-middleware":      "*",
-    "bower":                      "*",
-    "gulp-concat":                "*",
-    "gulp-uglify":                "^1.0.1",
-    "gulp-util":                  "*",
-    "connect-history-api-fallback": "^1.1.0"
+    "bower": "*",
+    "browser-sync": "*",
+    "connect-history-api-fallback": "^1.1.0",
+    "cssnano": "*",
+    "del": "*",
+    "gulp": "^3.9.1",
+    "gulp-changed": "*",
+    "gulp-cli": "^1.3.0",
+    "gulp-concat": "*",
+    "gulp-file-include": "*",
+    "gulp-htmlmin": "*",
+    "gulp-imagemin": "*",
+    "gulp-plumber": "*",
+    "gulp-postcss": "*",
+    "gulp-sass": "*",
+    "gulp-sourcemaps": "*",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "*",
+    "http-proxy-middleware": "*",
+    "node-notifier": "*"
   }
 }
