--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ before_install:
 - sudo apt-get update -qq
 install:
 - pip install ansible
-- pip install -e git+https://github.com/ansible/ansible-container.git@develop#egg=ansible_container
+- pip install -e git+https://github.com/ansible/ansible-container.git@develop#egg=ansible_container[docker]
 script:
 - docker version
 - docker-compose version
 - docker info
-- ansible-container build
-- ansible-container run -d
+- ansible-container --debug build
+- ansible-container run
 - docker ps -a
 - docker images
 - cd test
