--- a/roles/gulp-static/tasks/main.yml
+++ b/roles/gulp-static/tasks/main.yml
@@ -35,36 +35,12 @@
     disable_gpg_check: yes
   with_items:
     - "{{ NODE_RPM_URL }}"
-    - rsync
     - git 
     - which
 
-- name: Create sync dir
-  file:
-    path: /tmp/rsync
-    state: directory
-    owner: "{{ NODE_USER }}"
-    mode: 0777  
-
-- name: Sync static 
-  synchronize:
-    src: /tmp/static/ 
-    dest: /tmp/rsync/
-  remote_user: "{{ NODE_USER }}"
-
-- name: Stat static files
-  command: ls -l /tmp/rsync
-  register: output
-
-- debug: var=output.stdout_lines
-
-- name: Copy static files 
-  shell: "cp -R /tmp/rsync/* {{ NODE_HOME }}/dist"
-
-- name: Remove temp rsync dir
-  file:
-    path: /tmp/rsync
-    state: absent
+- name: Copy static files from shared volume
+  command: "cp -R /tmp/static/* {{ NODE_HOME }}/dist"
+  ignore_errors: yes
 
 - name: Symlink package.json
   file:
@@ -119,9 +95,3 @@
     chdir: "{{ NODE_HOME }}/"
   remote_user: "{{ NODE_USER }}"
 
-- name: Fetch built assets
-  synchronize:
-    src: "{{ NODE_HOME }}/dist/"
-    dest: /tmp/static
-    mode: pull
-  remote_user: "{{ NODE_USER }}"
