--- a/container.yml
+++ b/container.yml
@@ -1,4 +1,5 @@
 version: '2'
+
 defaults:
   POSTGRES_USER: django
   POSTGRES_PASSWORD: sesame
@@ -11,13 +12,14 @@ defaults:
   NODE_HOME: /node
   NODE_ROOT: ''
   GULP_DEV_PORT: 8080
+
 services:
-  
   django:
-    image: centos:7
+    from: 'centos:7'
+    roles:
+    - role: django-gunicorn
     environment:
-      DATABASE_URL: pgsql://{{ POSTGRES_USER }}:{{ POSTGRES_PASSWORD }}@postgresql:5432/{{
-        POSTGRES_DB }}
+      DATABASE_URL: 'pgsql://{{ POSTGRES_USER }}:{{ POSTGRES_PASSWORD }}@postgresql:5432/{{ POSTGRES_DB }}'
       DJANGO_ROOT: '{{ DJANGO_ROOT }}'
       DJANGO_VENV: '{{ DJANGO_VENV }}'
     expose:
@@ -28,74 +30,77 @@ services:
     user: '{{ DJANGO_USER }}'
     command: ['/usr/bin/dumb-init', '{{ DJANGO_VENV }}/bin/gunicorn', -w, '2', -b, '0.0.0.0:{{ DJANGO_PORT }}', 'project.wsgi:application']
     entrypoint: [/usr/bin/entrypoint.sh]
+    volumes:
+    - temp-space:/tmp/static:rw
     dev_overrides:
-      command: [/usr/bin/dumb-init, '{{ DJANGO_VENV }}/bin/python', manage.py, runserver,
-        '0.0.0.0:{{ DJANGO_PORT }}']
       volumes:
-      - $PWD:{{ DJANGO_ROOT }}
+      - '$PWD:{{ DJANGO_ROOT }}'
+      command: [/usr/bin/dumb-init, '{{ DJANGO_VENV }}/bin/python', manage.py, runserver, '0.0.0.0:{{ DJANGO_PORT }}']
       depends_on:
       - postgresql
-    options:
-      kube:
-        runAsUser: 1000
 
   gulp:
-    image: centos:7
+    from: 'centos:7'
+    roles:
+    - role: gulp-static 
     user: '{{ NODE_USER }}'
     working_dir: '{{ NODE_HOME }}'
     command: ['/bin/false']
     environment:
       NODE_HOME: '{{ NODE_HOME }}'
     volumes:
-      - $PWD:{{ NODE_HOME }}:z
+      - '$PWD:{{ NODE_HOME }}'
+      - temp-space:/tmp/static:rw
     dev_overrides:
       command: [/usr/bin/dumb-init, /usr/local/bin/gulp]
       ports:
-      - 8080:{{ GULP_DEV_PORT }}
+      - '8080:{{ GULP_DEV_PORT }}'
       - 3001:3001
       links:
       - django
-    options:
-      kube:
-        state: absent
-      openshift:
-        state: absent
 
   nginx:
-    image: centos:7
+    from: 'centos:7'
+    roles:
+    - role: ansible.nginx-container
+      ASSET_PATHS:
+      - /src/dist
+      PROXY: yes
+      PROXY_PASS: 'http://django:8080'
+      PROXY_LOCATION: "~* /(admin|api)"
     ports:
-    - {{ DJANGO_PORT }}:8000 
-    user: nginx
+    - '{{ DJANGO_PORT }}:8000'
     links:
     - django
-    command: ['/usr/bin/dumb-init', 'nginx', '-c', '/etc/nginx/nginx.conf']
     dev_overrides:
       ports: []
       command: /bin/false
-    options:
-      kube:
-        runAsUser: 1000 
 
   postgresql:
-    image: ansible/postgresql:latest
+    # Uses a pre-build postgresql image 
+    from: ansible/postgresql:latest
     environment:
-    - POSTGRES_DB={{ POSTGRES_DB }}
-    - POSTGRES_USER={{ POSTGRES_USER }}
-    - POSTGRES_PASS={{ POSTGRES_PASSWORD }}
-    - PGDATA=/var/lib/pgsql/data/userdata
+    - 'POSTGRES_DB={{ POSTGRES_DB }}'
+    - 'POSTGRES_USER={{ POSTGRES_USER }}'
+    - 'POSTGRES_PASS={{ POSTGRES_PASSWORD }}'
+    - 'PGDATA=/var/lib/pgsql/data/userdata'
     volumes:
     - postgres-data:/var/lib/pgsql/data
     expose:
     - 5432
-    options:
-      openshift:
-        persistent_volume_claims:
-        - volume_name: postgres-data
-          claim_name: postgres-data
-          access_modes:
-          - ReadWriteMany
+
+#    options:
+#      openshift:
+#        persistent_volume_claims:
+#        - volume_name: postgres-data
+#          claim_name: postgres-data
+#          access_modes:
+#          - ReadWriteMany
 
 registries: {}
 
 volumes:
-  postgres-data: {}
+  postgres-data:
+    docker: {}
+  temp-space: 
+    docker: {}
