nginx,PROXY_PASS: utilize DJANGO_PORT variable
Signed-off-by: Tomas Tomecek <ttomecek@redhat.com>

--- a/container.yml
+++ b/container.yml
@@ -77,7 +77,7 @@ services:
       ASSET_PATHS:
       - /tmp/dist
       PROXY: yes
-      PROXY_PASS: 'http://django:8080'
+      PROXY_PASS: 'http://django:{{ DJANGO_PORT }}'
       PROXY_LOCATION: "~* /(admin|api)"
     ports:
     - '{{ DJANGO_PORT }}:8000'
