newest djangorestframework doesn't support django==1.8
Signed-off-by: Tomas Tomecek <ttomecek@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ gunicorn==19.4.5
 dj-database-url==0.4.1
 
 # Demo requirements
-djangorestframework
+djangorestframework<3.5
 markdown 
 django-filter
 dj-static==0.0.6
